--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "indianmovies",
+  "name": "netflix",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://{prerna2502}.github.io",
@@ -25,12 +25,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
